syntax = "proto3";

//import "google/protobuf/timestamp.proto";

//option java_package = "io.grpc.dmap";
//option java_multiple_files = true;
//option java_outer_classname = "DMap";


service DMapService {
  rpc getOrCreateMap ( GetOrCreateMapRequest) returns (  GetOrCreateMapResponse) {}
  rpc getOrCreateMapRedis ( GetOrCreateMapRequest) returns (  GetOrCreateMapResponse) {}
  rpc dmapGet (DMapGetRequest) returns (DMapGetResponse) {}
  rpc dmapGetRedis (DMapGetRequest) returns (DMapGetResponse) {}
  rpc dmapSet (DMapSetRequest) returns (DMapSetResponse) {}
  rpc dmapSetRedis (DMapSetRequest) returns (DMapSetResponse) {}
}


message GetOrCreateMapRequest {
  string mapName = 1;
}

message GetOrCreateMapResponse {
  map<string, string> mapObject = 1;
}

message DMapGetRequest {
  string mapName = 1;
  string key = 2;
}

message DMapGetResponse {
  string value = 1;
}

message DMapSetRequest {
  string mapName = 1;
  string key = 2;
  string value = 3;
}

message DMapSetResponse {
  bool status = 1;
}